Fix title alignment on deployment page.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1516,6 +1516,7 @@ pre.field-input {
     margin-top: 2rem;
     margin-left: 2rem;
     float: left;
+    position: absolute;
 }
 #app .field-input-form .field-input {
     display: inline-block;
